[gd_scene load_steps=8 format=3 uid="uid://dfbfxm4ytxuls"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_ffijx"]
[ext_resource type="Texture2D" uid="uid://oqa10pqkpila" path="res://Sprites/UI/Bar/enemy_hp_bar_empty.png" id="2_3ct80"]
[ext_resource type="Texture2D" uid="uid://lwe1qtmnv8cl" path="res://Sprites/UI/Bar/enemy_hp_bar_full.png" id="3_f85xr"]
[ext_resource type="PackedScene" uid="uid://cvgjonbqjpxxo" path="res://Scenes/guy.tscn" id="4_y5bqc"]
[ext_resource type="PackedScene" uid="uid://2iexlpog4mst" path="res://Scenes/ragdoll_guy.tscn" id="5_mv6b6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ngfqe"]
radius = 0.56416
height = 3.46169

[sub_resource type="ViewportTexture" id="ViewportTexture_41m2h"]
viewport_path = NodePath("HealthBar/SubViewport")

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08642, 0)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ffijx")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
target_desired_distance = 0.5
avoidance_enabled = true
height = 2.17
radius = 0.8
neighbor_distance = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.669747, 0)
shape = SubResource("CapsuleShape3D_ngfqe")

[node name="PlayerDetectionRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.619354, 0)
collision_mask = 3
debug_shape_custom_color = Color(0, 0.74902, 0.337255, 1)
debug_shape_thickness = 5

[node name="HealthBar" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.344192, 0)
billboard = 1
texture = SubResource("ViewportTexture_41m2h")

[node name="SubViewport" type="SubViewport" parent="HealthBar"]
transparent_bg = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="HealthBar/SubViewport"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.5
offset_right = 703.5
offset_bottom = 170.0
grow_horizontal = 2
scale = Vector2(0.21, 0.21)
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0
texture_under = ExtResource("2_3ct80")
texture_progress = ExtResource("3_f85xr")

[node name="HurtBox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.680549, 0)
collision_layer = 8
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("CapsuleShape3D_ngfqe")

[node name="guy" parent="." instance=ExtResource("4_y5bqc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.07806, 0)

[node name="AttackTimer" type="Timer" parent="."]

[node name="ragdoll_guy" parent="." instance=ExtResource("5_mv6b6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
